--- a/templates/blogsublayout.tmpl
+++ b/templates/blogsublayout.tmpl
@@ -47,7 +47,7 @@
 
 {% block Scripts %}
 <script type="text/javascript">
-	var tagul = document.getElementById("tagul");		
+	var tagul = document.getElementById("tagul");
 	function getalltags(){
 		$.ajax({
 			type: "get",
@@ -92,11 +92,12 @@
 			tagli.style.marginBottom="2px";
 			//var taghref= documet.createElement("a");
 			tagli.innerHTML= "<a class=\"btn btn-info\" href='/blog/tag/"+result2[i].tagname+"' role='button'>"+result2[i].tagname+"</a>";
-			
 			tagul.appendChild(tagli);
 		}
+		var tagcont = document.getElementById("taglistcont");
+		tagcont.appendChild(tagol);
 	}
-
+	
 	function appendcreatetagcont(){
 		var tagli = document.createElement("li");
 		tagli.style.marginBottom="2px";
@@ -161,7 +162,7 @@
 		      });
 	    }
 	}
-
+	
 	window.onload= getalltags();
 </script>
 {% block BlogScripts %}{% endblock %}
