--- a/templates/edit.tmpl
+++ b/templates/edit.tmpl
@@ -29,7 +29,7 @@
             这里写你的博客内容
         </script>
     	<br>
-        <input  id="pushbtn" class="btn btn-info" role='button' type= "submit">
+        <input  id="pushbtn" class="btn btn-info" role='button' type= "submit" value="发布">
     </form>
 </div>
 </div>
