--- a/templates/blogindex.tmpl
+++ b/templates/blogindex.tmpl
@@ -108,10 +108,10 @@
 		h2.textContent = result2[i].BlogName;
 		var div3 = document.createElement("div");
 		var small1 = document.createElement("small");
-		small1.style.float = 'left';
+		small1.float = 'left';
 		small1.textContent= result2[i].WriterName;
 		var small2 = document.createElement("small");
-		small2.style.float = 'left';
+		small2.float = 'right';
 		small2.textContent= result2[i].Submittime;
 		var div4=  document.createElement("div");
 		div4.style.height='35%';
